split data on t5c and added viz

--- a/week39.ipynb
+++ b/week39.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "4                 48.23            17.06  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,177 +132,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Country Name</th>\n",
-       "      <th>quarter</th>\n",
-       "      <th>average download speed</th>\n",
-       "      <th>average upload speed</th>\n",
-       "      <th>average latency</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>449</th>\n",
-       "      <td>CY</td>\n",
-       "      <td>Kýpros</td>\n",
-       "      <td>2022-01-01</td>\n",
-       "      <td>49.56</td>\n",
-       "      <td>18.53</td>\n",
-       "      <td>16.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>481</th>\n",
-       "      <td>AL</td>\n",
-       "      <td>Shqipëria</td>\n",
-       "      <td>2022-04-01</td>\n",
-       "      <td>43.61</td>\n",
-       "      <td>20.73</td>\n",
-       "      <td>11.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>NL</td>\n",
-       "      <td>Nederland</td>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>83.39</td>\n",
-       "      <td>38.87</td>\n",
-       "      <td>13.74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>105</th>\n",
-       "      <td>RS</td>\n",
-       "      <td>Serbia</td>\n",
-       "      <td>2019-07-01</td>\n",
-       "      <td>39.71</td>\n",
-       "      <td>10.16</td>\n",
-       "      <td>17.67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>493</th>\n",
-       "      <td>ES</td>\n",
-       "      <td>España</td>\n",
-       "      <td>2022-04-01</td>\n",
-       "      <td>176.19</td>\n",
-       "      <td>153.58</td>\n",
-       "      <td>17.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>FR</td>\n",
-       "      <td>France</td>\n",
-       "      <td>2020-04-01</td>\n",
-       "      <td>95.65</td>\n",
-       "      <td>77.71</td>\n",
-       "      <td>27.33</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    Country Country Name    quarter  average download speed  \\\n",
-       "449      CY       Kýpros 2022-01-01                   49.56   \n",
-       "481      AL    Shqipëria 2022-04-01                   43.61   \n",
-       "26       NL    Nederland 2019-01-01                   83.39   \n",
-       "105      RS       Serbia 2019-07-01                   39.71   \n",
-       "493      ES       España 2022-04-01                  176.19   \n",
-       "198      FR       France 2020-04-01                   95.65   \n",
-       "\n",
-       "     average upload speed  average latency  \n",
-       "449                 18.53            16.40  \n",
-       "481                 20.73            11.70  \n",
-       "26                  38.87            13.74  \n",
-       "105                 10.16            17.67  \n",
-       "493                153.58            17.91  \n",
-       "198                 77.71            27.33  "
+       "array([['AL', 'Shqipëria'],\n",
+       "       ['AT', 'Österreich'],\n",
+       "       ['BE', 'Belgique/België'],\n",
+       "       ...,\n",
+       "       ['UA', 'Ukraine'],\n",
+       "       ['UK', 'United Kingdom'],\n",
+       "       ['XKO', 'Kosovo']], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.sample(6)"
+    "df.loc[:,[\"Country\",\"Country Name\"]].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Schweiz/Suisse/Svizzera    False\n",
-       "Eesti                      False\n",
-       "Bulgaria                   False\n",
-       "Liechtenstein              False\n",
-       "Shqipëria                  False\n",
-       "United Kingdom             False\n",
-       "Česko                      False\n",
+       "Kýpros                     False\n",
        "Sverige                    False\n",
-       "Danmark                    False\n",
+       "Magyarország               False\n",
+       "Suomi/Finland              False\n",
+       "Česko                      False\n",
+       "Severna Makedonija         False\n",
+       "Polska                     False\n",
+       "Ísland                     False\n",
+       "Éire/Ireland               False\n",
+       "Norge                      False\n",
+       "France                     False\n",
+       "Malta                      False\n",
+       "Italia                     False\n",
+       "Bulgaria                   False\n",
+       "Serbia                     False\n",
+       "Portugal                   False\n",
+       "Lietuva                    False\n",
+       "Hrvatska                   False\n",
        "România                    False\n",
        "Slovensko                  False\n",
-       "Éire/Ireland               False\n",
-       "Luxembourg                 False\n",
-       "Polska                     False\n",
-       "Crna Gora                  False\n",
-       "Deutschland                False\n",
+       "Belgique/België            False\n",
        "Österreich                 False\n",
        "España                     False\n",
        "Elláda                     False\n",
-       "Suomi/Finland              False\n",
-       "Malta                      False\n",
-       "Latvija                    False\n",
-       "Lietuva                    False\n",
-       "Ísland                     False\n",
-       "Slovenija                  False\n",
-       "Portugal                   False\n",
-       "Norge                      False\n",
-       "Magyarország               False\n",
-       "Hrvatska                   False\n",
-       "France                     False\n",
-       "Belgique/België            False\n",
-       "Türkiye                    False\n",
-       "Severna Makedonija         False\n",
+       "Eesti                      False\n",
        "Nederland                  False\n",
-       "Serbia                     False\n",
-       "Italia                     False\n",
-       "Kýpros                     False\n",
-       "Moldova                     True\n",
-       "Bosnia and Herzegovina      True\n",
+       "Danmark                    False\n",
+       "Latvija                    False\n",
+       "Schweiz/Suisse/Svizzera    False\n",
+       "Liechtenstein              False\n",
+       "Crna Gora                  False\n",
+       "Shqipëria                  False\n",
+       "Türkiye                    False\n",
+       "United Kingdom             False\n",
+       "Slovenija                  False\n",
+       "Luxembourg                 False\n",
+       "Deutschland                False\n",
        "Ukraine                     True\n",
+       "Bosnia and Herzegovina      True\n",
        "Kosovo                      True\n",
+       "Moldova                     True\n",
        "Name: Country Name, dtype: bool"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,53 +235,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Schweiz/Suisse/Svizzera    14\n",
-       "Bulgaria                   14\n",
-       "Shqipëria                  14\n",
-       "United Kingdom             14\n",
-       "Česko                      14\n",
-       "Sverige                    14\n",
-       "Danmark                    14\n",
-       "România                    14\n",
-       "Slovensko                  14\n",
-       "Éire/Ireland               14\n",
-       "Luxembourg                 14\n",
-       "Polska                     14\n",
-       "Crna Gora                  14\n",
-       "Deutschland                14\n",
-       "Österreich                 14\n",
-       "España                     14\n",
-       "Elláda                     14\n",
-       "Liechtenstein              14\n",
-       "Suomi/Finland              14\n",
-       "Eesti                      14\n",
-       "Malta                      14\n",
-       "Ísland                     14\n",
-       "Slovenija                  14\n",
-       "Portugal                   14\n",
-       "Norge                      14\n",
-       "Magyarország               14\n",
-       "Hrvatska                   14\n",
-       "France                     14\n",
-       "Latvija                    14\n",
-       "Türkiye                    14\n",
-       "Severna Makedonija         14\n",
-       "Nederland                  14\n",
-       "Serbia                     14\n",
-       "Italia                     14\n",
        "Kýpros                     14\n",
+       "Slovensko                  14\n",
+       "Suomi/Finland              14\n",
+       "Česko                      14\n",
+       "Severna Makedonija         14\n",
+       "Polska                     14\n",
+       "Ísland                     14\n",
+       "Éire/Ireland               14\n",
+       "Norge                      14\n",
+       "France                     14\n",
+       "Malta                      14\n",
+       "Italia                     14\n",
+       "Bulgaria                   14\n",
+       "Serbia                     14\n",
+       "Portugal                   14\n",
        "Lietuva                    14\n",
+       "Hrvatska                   14\n",
+       "Magyarország               14\n",
        "Belgique/België            14\n",
+       "Sverige                    14\n",
+       "Österreich                 14\n",
+       "Elláda                     14\n",
+       "Eesti                      14\n",
+       "Nederland                  14\n",
+       "Danmark                    14\n",
+       "Latvija                    14\n",
+       "Schweiz/Suisse/Svizzera    14\n",
+       "Liechtenstein              14\n",
+       "Crna Gora                  14\n",
+       "Shqipëria                  14\n",
+       "Türkiye                    14\n",
+       "United Kingdom             14\n",
+       "Slovenija                  14\n",
+       "Luxembourg                 14\n",
+       "Deutschland                14\n",
+       "España                     14\n",
+       "România                    14\n",
        "Name: Country Name, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +424,7 @@
        "                2021-01-01            14.11  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,35 +435,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DatetimeIndex(['2019-01-01', '2019-04-01', '2019-07-01', '2019-10-01',\n",
-       "               '2020-01-01', '2020-04-01', '2020-07-01', '2020-10-01',\n",
-       "               '2021-01-01', '2021-04-01', '2021-07-01', '2021-10-01',\n",
-       "               '2022-01-01', '2022-04-01'],\n",
-       "              dtype='datetime64[ns]', name='quarter', freq=None)"
+       "FrozenList([['Belgique/België', 'Bulgaria', 'Crna Gora', 'Danmark', 'Deutschland', 'Eesti', 'Elláda', 'España', 'France', 'Hrvatska', 'Italia', 'Kýpros', 'Latvija', 'Liechtenstein', 'Lietuva', 'Luxembourg', 'Magyarország', 'Malta', 'Nederland', 'Norge', 'Polska', 'Portugal', 'România', 'Schweiz/Suisse/Svizzera', 'Serbia', 'Severna Makedonija', 'Shqipëria', 'Slovenija', 'Slovensko', 'Suomi/Finland', 'Sverige', 'Türkiye', 'United Kingdom', 'Éire/Ireland', 'Ísland', 'Österreich', 'Česko'], [2019-01-01 00:00:00, 2019-04-01 00:00:00, 2019-07-01 00:00:00, 2019-10-01 00:00:00, 2020-01-01 00:00:00, 2020-04-01 00:00:00, 2020-07-01 00:00:00, 2020-10-01 00:00:00, 2021-01-01 00:00:00, 2021-04-01 00:00:00, 2021-07-01 00:00:00, 2021-10-01 00:00:00, 2022-01-01 00:00:00, 2022-04-01 00:00:00]])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cleanDf.loc[\"France\"].index"
+    "cleanDf.index.levels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "franceData = cleanDf.loc[\"France\"]"
+    "franceData = cleanDf.loc[\"France\"]\n",
+    "ukData = cleanDf.loc[\"United Kingdom\"]\n",
+    "portugalData = cleanDf.loc[\"Portugal\"]\n",
+    "italyData = cleanDf.loc[\"Italia\"]\n",
+    "germanyData = cleanDf.loc[\"Deutschland\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "franceData.to_csv(\"france.csv\")\n",
+    "ukData.to_csv(\"uk.csv\")\n",
+    "portugalData.to_csv(\"portugal.csv\")\n",
+    "italyData.to_csv(\"italy.csv\")\n",
+    "germanyData.to_csv(\"germany.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. France"
    ]
   },
   {
